make tests pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,9 @@
 sudo: false
 language: scala
 scala:
-  - 2.11.2
+  - 2.11.11
   - 2.12.4
 
 script:
-- sbt ++$TRAVIS_SCALA_VERSION upickleJVM/test upickleJS/test
-# Tricks to avoid unnecessary cache updates, from
-# http://www.scala-sbt.org/0.13/docs/Travis-CI-with-sbt.html
-- find $HOME/.sbt -name "*.lock" | xargs rm
-- find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
-
-# These directories are cached to S3 at the end of the build
-cache:
-  directories:
-    - $HOME/.ivy2/cache
-    - $HOME/.sbt/boot/
+- curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.6/0.1.6 && chmod +x ~/bin/mill
+- mill __[$TRAVIS_SCALA_VERSION].test
