--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 language: scala
 
 before_install:
-  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.3.4/0.3.4 && chmod +x ~/bin/mill
+  - curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.3.6/0.3.6-85-38fce6 && chmod +x ~/bin/mill
 
 script:
 - mill __[$TRAVIS_SCALA_VERSION].test
@@ -11,5 +11,4 @@ jobs:
   include:
     - scala: 2.11.12
     - scala: 2.12.7
-    - scala: 2.13.0-M5
-      script: for proj in core ujson upack upickle; do for pf in jvm js; do mill $proj.$pf[$TRAVIS_SCALA_VERSION].test || exit 1; done || exit 1; done
+    - scala: 2.13.0-RC1
