--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ scala:
   - 2.12.7
 
 script:
-- curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.3.4/0.3.4 && chmod +x ~/bin/mill
+- curl -L -o ~/bin/mill https://github.com/lihaoyi/mill/releases/download/0.3.6/0.3.6-92-68505a && chmod +x ~/bin/mill
 - mill __[$TRAVIS_SCALA_VERSION].test
