Add support for Scala Native 0.3 and 0.4.0-M2
- Update Scala 2.12 to 2.12.10
- Update Scala 2.13 to 2.13.1
- Update Mill script to 0.6.1
- Update Scalatest to 3.1.1
- Use ScalatestPlus scalacheck for generators
- Refactor tests to use new Scalatest
- Enable scalatest tests for all platforms except Scala Native 0.3.9 (no artifact)
- Fix Travis deprecations

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-sudo: false
+os: linux
 language: scala
 
 script:
-- ./mill -i __.test.test
-
+  - curl https://raw.githubusercontent.com/scala-native/scala-native/master/scripts/travis_setup.sh | bash -x
+  - ./mill -i __.test.test
