--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      JAVA_OPTS: "-Xss10M"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
