Rename `master` branch to `main`

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,12 +3,12 @@ name: ci
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - '*'
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test-js:
